k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: taskflow
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - etudiant-07-taskflow.development.atelier.ovh
      secretName: taskflow-tls

  rules:
    - host: etudiant-07-taskflow.development.atelier.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskflow-frontend
                port:
                  number: 80
